--- a/docs/extra.css
+++ b/docs/extra.css
@@ -8,6 +8,10 @@ h2  {
 h3  {
   margin-top: 1em;
 }
+h4  {
+  font-size: medium;
+  font-family: monospace;
+}
 p {
   margin-top: 1em;
   margin-bottom: 1em;
